experimenting more loss functions

--- a/loss_functions.ipynb
+++ b/loss_functions.ipynb
@@ -10,13 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "b29848de-d894-4206-9540-558674408a5b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
+    "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
+    "\n",
     "import numpy as np"
    ]
   },
@@ -46,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "id": "797bdd8f-d093-4e86-9edd-ecf13054e9c4",
    "metadata": {},
    "outputs": [],
@@ -60,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "id": "fb6bfacb-75c6-4bf5-b4cf-2faf4c662629",
    "metadata": {},
    "outputs": [],
@@ -94,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "id": "5be21d28-fd6f-4e1d-885d-2b238f958af4",
    "metadata": {},
    "outputs": [],
@@ -126,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "id": "1cac6c08-ac9a-4f47-8761-9feb785c8b66",
    "metadata": {},
    "outputs": [],
@@ -138,6 +140,122 @@
     "loss_mae = mae(y_true_np, y_pred_np)\n",
     "\n",
     "assert np.allclose(loss, loss_mae), \"Incorrect implementation\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c171385f-c811-4362-9792-6f951495cf04",
+   "metadata": {},
+   "source": [
+    "#### Dice Loss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc727996-4a65-4fc3-b626-68c99bc25955",
+   "metadata": {},
+   "source": [
+    "Used in **image segmentation tasks**, widely used to segment both 2D and 3D medical images."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "3429b2c5-4a2b-4e94-9f29-ed56aace6344",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DiceLoss(nn.Module):\n",
+    "    def __init__(self, smooth=1e-6):\n",
+    "        super(DiceLoss, self).__init__()\n",
+    "        self.smooth = smooth\n",
+    "\n",
+    "    def forward(self, preds, targets):\n",
+    "        # Flatten predictions and targets per sample\n",
+    "        num = preds.size(0)  # batch size\n",
+    "\n",
+    "        # Flattens into [num, N] shape where N = C × D × H × W or C × H × W.\n",
+    "        preds = preds.contiguous().view(num, -1)\n",
+    "        targets = targets.contiguous().view(num, -1)\n",
+    "        \n",
+    "        intersection = (preds * targets).sum(dim=1)\n",
+    "        dice = (2. * intersection + self.smooth) / \\\n",
+    "               (preds.sum(dim=1) + targets.sum(dim=1) + self.smooth)\n",
+    "\n",
+    "        loss = 1 - dice  # Dice loss\n",
+    "        return loss.mean()\n",
+    "\n",
+    "dice_loss = DiceLoss()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "d83a3d74-a08b-49f5-85f7-a2f12576b160",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pred_2d shape:  torch.Size([2, 1, 4, 4])\n",
+      "target_2d shape:  torch.Size([2, 1, 4, 4])\n",
+      "pred_3d shape:  torch.Size([1, 1, 2, 3, 3])\n",
+      "target_3d shape:  torch.Size([1, 1, 2, 3, 3])\n",
+      "tensor(0.0625) tensor(0.0526)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# [2, 1, 4, 4], Batch of 2, single channel, 4x4\n",
+    "pred_2d = torch.tensor([[[[0, 1, 0, 1],\n",
+    "                            [1, 1, 0, 0],\n",
+    "                            [0, 0, 1, 1],\n",
+    "                            [1, 0, 1, 0]]],\n",
+    "                          \n",
+    "                          [[[0, 1, 1, 0],\n",
+    "                            [1, 0, 0, 1],\n",
+    "                            [0, 1, 1, 0],\n",
+    "                            [1, 1, 0, 0]]]], dtype=torch.float32)\n",
+    "\n",
+    "target_2d = torch.tensor([[[[0, 1, 0, 1],\n",
+    "                              [1, 1, 0, 0],\n",
+    "                              [0, 0, 1, 1],\n",
+    "                              [1, 0, 1, 0]]],\n",
+    "                            \n",
+    "                            [[[1, 1, 1, 0],\n",
+    "                              [1, 0, 0, 1],\n",
+    "                              [0, 1, 0, 0],\n",
+    "                              [1, 1, 0, 0]]]], dtype=torch.float32)\n",
+    "\n",
+    "print(\"pred_2d shape: \", pred_2d.shape)\n",
+    "print(\"target_2d shape: \", target_2d.shape)\n",
+    "\n",
+    "# [1, 1, 2, 3, 3] Batch of 1, single channel, depth=2, 3x3\n",
+    "# N, C, D, H, W > batch_size=1, channels=1, depth=2 (number of slices), height=3, width=3\n",
+    "pred_3d = torch.tensor([[[[[0, 1, 1],\n",
+    "                          [1, 0, 0],\n",
+    "                          [0, 1, 0]],\n",
+    "                         \n",
+    "                         [[1, 1, 0],\n",
+    "                          [0, 1, 0],\n",
+    "                          [1, 0, 1]]]]], dtype=torch.float32)\n",
+    "\n",
+    "target_3d = torch.tensor([[[[[0, 1, 1],\n",
+    "                            [1, 0, 0],\n",
+    "                            [0, 1, 0]],\n",
+    "                           \n",
+    "                           [[1, 1, 0],\n",
+    "                            [1, 1, 0],\n",
+    "                            [1, 0, 1]]]]], dtype=torch.float32)\n",
+    "\n",
+    "print(\"pred_3d shape: \", pred_3d.shape)\n",
+    "print(\"target_3d shape: \", target_3d.shape)\n",
+    "\n",
+    "loss_value_2d = dice_loss(pred_2d, target_2d)\n",
+    "loss_value_3d = dice_loss(pred_3d, target_3d)\n",
+    "\n",
+    "print(loss_value_2d, loss_value_3d)"
    ]
   }
  ],
