--- a/model_modules_and_blocks.ipynb
+++ b/model_modules_and_blocks.ipynb
@@ -10,10 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "dc7d087a-472a-463f-b66c-274f87748639",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -21,6 +30,9 @@
     "import torch.nn.functional as F\n",
     "import matplotlib.pyplot as plt\n",
     "from collections import OrderedDict\n",
+    "\n",
+    "# from torchsummary import summary\n",
+    "from torchinfo import summary\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -159,12 +171,259 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7edb7dc4-7d6b-4421-9a9c-c18f78a547f3",
+   "metadata": {},
+   "source": [
+    "We can create reusable blocks by subclassing `nn.Module`."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5db90cda-234c-4943-a9c7-57cd933967a5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class MLPBlock(nn.Module):\n",
+    "    def __init__(self, in_features, out_features):\n",
+    "        super().__init__()\n",
+    "        self.block = nn.Sequential(\n",
+    "            nn.Linear(in_features, out_features),\n",
+    "            nn.BatchNorm1d(out_features),\n",
+    "            nn.ReLU()\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.block(x)\n",
+    "\n",
+    "class FullModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.mlp1 = MLPBlock(10, 64)\n",
+    "        self.mlp2 = MLPBlock(64, 32)\n",
+    "        self.output = nn.Linear(32, 1)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.mlp1(x)\n",
+    "        x = self.mlp2(x)\n",
+    "        return self.output(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "5162af28-6e90-4b11-bcc1-5faf41ccbf4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "==========================================================================================\n",
+       "Layer (type:depth-idx)                   Output Shape              Param #\n",
+       "==========================================================================================\n",
+       "FullModel                                [1, 1]                    --\n",
+       "├─MLPBlock: 1-1                          [1, 64]                   --\n",
+       "│    └─Sequential: 2-1                   [1, 64]                   --\n",
+       "│    │    └─Linear: 3-1                  [1, 64]                   704\n",
+       "│    │    └─BatchNorm1d: 3-2             [1, 64]                   128\n",
+       "│    │    └─ReLU: 3-3                    [1, 64]                   --\n",
+       "├─MLPBlock: 1-2                          [1, 32]                   --\n",
+       "│    └─Sequential: 2-2                   [1, 32]                   --\n",
+       "│    │    └─Linear: 3-4                  [1, 32]                   2,080\n",
+       "│    │    └─BatchNorm1d: 3-5             [1, 32]                   64\n",
+       "│    │    └─ReLU: 3-6                    [1, 32]                   --\n",
+       "├─Linear: 1-3                            [1, 1]                    33\n",
+       "==========================================================================================\n",
+       "Total params: 3,009\n",
+       "Trainable params: 3,009\n",
+       "Non-trainable params: 0\n",
+       "Total mult-adds (M): 0.00\n",
+       "==========================================================================================\n",
+       "Input size (MB): 0.00\n",
+       "Forward/backward pass size (MB): 0.00\n",
+       "Params size (MB): 0.01\n",
+       "Estimated Total Size (MB): 0.01\n",
+       "=========================================================================================="
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = FullModel()\n",
+    "summary(model, input_size=(1, 10)) # b = 1, N features = 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f22c7670-c567-430b-9ee5-0351d377622e",
+   "metadata": {},
+   "source": [
+    "#### Modules with Control Flow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e57063e0-d8e6-4978-ac09-833776023f81",
+   "metadata": {},
+   "source": [
+    "This flexibility is essential for RNNs, dynamic routing, etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a00c4e9a-290c-4432-a07b-ac7a3eba6d0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ResidualBlock(nn.Module):\n",
+    "    def __init__(self, dim):\n",
+    "        super().__init__()\n",
+    "        self.linear = nn.Linear(dim, dim)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        if x.mean() > 0:\n",
+    "            return x + self.linear(x)\n",
+    "        else:\n",
+    "            return x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0dda4fb4-bcc4-4143-a9b7-ac58d4c727f2",
+   "metadata": {},
+   "source": [
+    "#### Nested Modules (Using `ModuleList` and `ModuleDict`)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df773da2-fb3f-4875-860a-34c7410a7301",
+   "metadata": {},
+   "source": [
+    "We can create a list of layers using `ModuleList`. `ModuleList` is container to store layers, which are registered as submodules, but we must manually define the forward logic, unlike the previous `nn.Sequential` that didn't require."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "e1062ffc-10b8-4d84-8a44-3a28d4c0de10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==========================================================================================\n",
+      "Layer (type:depth-idx)                   Output Shape              Param #\n",
+      "==========================================================================================\n",
+      "DeepMLP                                  [1, 1]                    --\n",
+      "├─ModuleList: 1-1                        --                        --\n",
+      "│    └─Linear: 2-1                       [1, 64]                   704\n",
+      "│    └─Linear: 2-2                       [1, 64]                   4,160\n",
+      "│    └─Linear: 2-3                       [1, 64]                   4,160\n",
+      "│    └─Linear: 2-4                       [1, 64]                   4,160\n",
+      "│    └─Linear: 2-5                       [1, 64]                   4,160\n",
+      "├─Linear: 1-2                            [1, 1]                    65\n",
+      "==========================================================================================\n",
+      "Total params: 17,409\n",
+      "Trainable params: 17,409\n",
+      "Non-trainable params: 0\n",
+      "Total mult-adds (M): 0.02\n",
+      "==========================================================================================\n",
+      "Input size (MB): 0.00\n",
+      "Forward/backward pass size (MB): 0.00\n",
+      "Params size (MB): 0.07\n",
+      "Estimated Total Size (MB): 0.07\n",
+      "==========================================================================================\n",
+      "DeepMLP(\n",
+      "  (layers): ModuleList(\n",
+      "    (0): Linear(in_features=10, out_features=64, bias=True)\n",
+      "    (1-4): 4 x Linear(in_features=64, out_features=64, bias=True)\n",
+      "  )\n",
+      "  (output): Linear(in_features=64, out_features=1, bias=True)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "class DeepMLP(nn.Module):\n",
+    "    def __init__(self, num_layers=5, in_dim=10, hidden_dim=64):\n",
+    "        super().__init__()\n",
+    "        self.layers = nn.ModuleList([\n",
+    "            nn.Linear(in_dim if i == 0 else hidden_dim, hidden_dim) for i in range(num_layers)\n",
+    "        ])\n",
+    "        self.output = nn.Linear(hidden_dim, 1)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        for layer in self.layers:\n",
+    "            x = torch.relu(layer(x))\n",
+    "        return self.output(x)\n",
+    "\n",
+    "model = DeepMLP()\n",
+    "print(summary(model, input_size=(1, 10))) # b = 1, N features = 10\n",
+    "print(model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4611b30-393e-49fc-b596-f9ae2e0ba058",
+   "metadata": {},
+   "source": [
+    "`ModuleDict` is a dictionary-like container for layers or blocks, keyed by name."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "3eb9001b-e754-4bda-b923-212815e10abc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([5, 20])\n",
+      "torch.Size([5, 30])\n"
+     ]
+    }
+   ],
+   "source": [
+    "class CustomBranch(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.branches = nn.ModuleDict({\n",
+    "            'a': nn.Linear(10, 20),\n",
+    "            'b': nn.Linear(10, 30)\n",
+    "        })\n",
+    "\n",
+    "    def forward(self, x, branch='a'):\n",
+    "        return self.branches[branch](x)\n",
+    "\n",
+    "model = CustomBranch()\n",
+    "\n",
+    "x = torch.randn(5, 10)  # batch of 5\n",
+    "\n",
+    "out_a = model(x, branch='a')  # uses nn.Linear(10, 20)\n",
+    "out_b = model(x, branch='b')  # uses nn.Linear(10, 30)\n",
+    "\n",
+    "print(out_a.shape)  # torch.Size([5, 20])\n",
+    "print(out_b.shape)  # torch.Size([5, 30])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74cae300-f47c-455d-b6fe-856093278608",
+   "metadata": {},
+   "source": [
+    "ModuleDict is great when:\n",
+    "* You have multiple branches or modules (e.g. for conditional computation) or you want named modules, accessed dynamically.\n",
+    "* You're building things like: Mixture of Experts, task-specific heads in multitask learning, router-based architectures, or transformers with named components."
+   ]
   }
  ],
  "metadata": {
