--- a/tensors_vs_parameters_vs_buffers.ipynb
+++ b/tensors_vs_parameters_vs_buffers.ipynb
@@ -41,7 +41,7 @@
    "id": "c583c6db-f83a-48b0-94a6-0575cc13fda8",
    "metadata": {},
    "source": [
-    "#### Tensors vs Parameters vs Buffers: What is the difference?"
+    "#### Tensors vs Parameters vs Buffers: What are the differences?"
    ]
   },
   {
