added missisng tokenizer and metrics utils

--- a/embedding_matrix_and_models_outputs.ipynb
+++ b/embedding_matrix_and_models_outputs.ipynb
@@ -5,7 +5,7 @@
    "id": "29a6b88c-7f2d-42fe-b922-4b69133c807d",
    "metadata": {},
    "source": [
-    "#### Understanding LLM models output and embedding matrix."
+    "Understanding LLM models output and relation to embedding matrix."
    ]
   },
   {
@@ -22,13 +22,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "0a48d5ea-4b59-4314-baf1-9b8cc19ded66",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/c/Users/abdal/Documents/Projects/ai-notebooks/env/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import AutoModel, AutoTokenizer\n",
-    "from helpers import show_tokenization, search_through_vocab_dict_using_id, search_through_vocab_dict_using_token"
+    "from utils.tokenizer import show_tokenization, search_through_vocab_dict_using_id, search_through_vocab_dict_using_token"
    ]
   },
   {
@@ -43,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "de5e4c0e-dc1a-4a1d-b5c1-76c86de75f04",
    "metadata": {},
    "outputs": [],
@@ -57,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "7ec572f2-9975-41fb-98dd-1eec0196474d",
    "metadata": {},
    "outputs": [
@@ -65,8 +74,6 @@
      "data": {
       "text/plain": [
        "BertConfig {\n",
-       "  \"_attn_implementation_autoset\": true,\n",
-       "  \"_name_or_path\": \"emilyalsentzer/Bio_ClinicalBERT\",\n",
        "  \"attention_probs_dropout_prob\": 0.1,\n",
        "  \"classifier_dropout\": null,\n",
        "  \"hidden_act\": \"gelu\",\n",
@@ -81,14 +88,15 @@
        "  \"num_hidden_layers\": 12,\n",
        "  \"pad_token_id\": 0,\n",
        "  \"position_embedding_type\": \"absolute\",\n",
-       "  \"transformers_version\": \"4.46.2\",\n",
+       "  \"torch_dtype\": \"float32\",\n",
+       "  \"transformers_version\": \"4.53.0\",\n",
        "  \"type_vocab_size\": 2,\n",
        "  \"use_cache\": true,\n",
        "  \"vocab_size\": 28996\n",
        "}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "7ba7f143-be11-4e17-bd69-c3143c54dec6",
    "metadata": {},
    "outputs": [
@@ -269,7 +277,7 @@
        "18    tensor(102)     [SEP]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "id": "a9993bb4-5730-409a-99a1-711a79650259",
    "metadata": {},
    "outputs": [
@@ -354,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "91c9c139-d11c-4d23-84c9-a07b65687d99",
    "metadata": {},
    "outputs": [
@@ -364,7 +372,7 @@
        "torch.Size([1, 19, 768])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
