--- a/sentence_representation_and_embedding_pooling.ipynb
+++ b/sentence_representation_and_embedding_pooling.ipynb
@@ -10,19 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "id": "d2db8999-6a30-4095-94bb-64472f2fc15a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# for auto reload when changes are made in the package\n",
     "%load_ext autoreload\n",
@@ -31,18 +22,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 16,
    "id": "7d39c990-531e-4cf1-82a0-401a5585e848",
    "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import AutoModel, AutoTokenizer\n",
-    "from helpers import show_tokenization, cosine_similarity, euclidean_distance"
+    "from utils.tokenizer import show_tokenization, embedding_pooling\n",
+    "from utils.metrics import cosine_similarity, euclidean_distance\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "id": "28b09e02-8a5b-4998-ba7f-911359d31119",
    "metadata": {},
    "outputs": [],
@@ -52,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "id": "35e868cc-67bf-487d-b40c-2dc5cc13d53f",
    "metadata": {},
    "outputs": [],
@@ -74,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "id": "807d6dd7-ad0e-4989-9f08-1cc98a98e279",
    "metadata": {},
    "outputs": [
@@ -122,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 19,
    "id": "f2fc541f-b0bf-417a-acc1-d12fbe4158ff",
    "metadata": {},
    "outputs": [],
@@ -143,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 20,
    "id": "37d92508-735a-4b6b-8896-bee6924aa877",
    "metadata": {},
    "outputs": [],
@@ -151,12 +144,12 @@
     "similarity_cls_cls = cosine_similarity(cls_pooling[0].cpu().detach().numpy(), cls_pooling[0].cpu().detach().numpy())\n",
     "\n",
     "# this has to be one just as a validation\n",
-    "assert similarity_cls_cls == 1, \"Wrong implementation for cosine similarity\""
+    "assert np.allclose(similarity_cls_cls, 1), \"Wrong implementation for cosine similarity\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 21,
    "id": "3cad9755-e538-42f4-88b3-408a1304052e",
    "metadata": {},
    "outputs": [],
@@ -168,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 22,
    "id": "4e36541d-2a04-4546-bce3-a93372f73a49",
    "metadata": {},
    "outputs": [
