--- a/text_tokens_and_tokenizers.ipynb
+++ b/text_tokens_and_tokenizers.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "87ea7b45-0b4a-4585-97f6-8b5d7e5aa787",
+   "metadata": {},
+   "source": [
+    "This notebook is an attempt to understand different LLM architecture components and tokenization process."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4b6220f0-bf0f-49c5-92c2-9455cef116aa",
    "metadata": {},
    "source": [
@@ -14,19 +22,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "a1a6aeb7-4d37-4c46-8995-4c304ba5299e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# for auto reload when changes are made in the package\n",
     "%load_ext autoreload\n",
@@ -35,18 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "id": "a449e535-208d-4240-b74e-9a0129d9d780",
    "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import AutoModel, AutoTokenizer\n",
-    "from helpers import show_tokenization, search_through_vocab_dict_using_id, search_through_vocab_dict_using_token"
+    "from utils.tokenizer import show_tokenization, search_through_vocab_dict_using_id, search_through_vocab_dict_using_token"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "6f894594-2466-47e0-a61d-d9d6ca28cbf8",
    "metadata": {},
    "outputs": [],
@@ -56,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "3e562340-7bc3-4b63-b25b-a9e446333677",
    "metadata": {},
    "outputs": [],
@@ -67,23 +66,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "6b54e6ca-9918-46cd-8fce-e341ca5b2299",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "BertTokenizerFast(name_or_path='emilyalsentzer/Bio_ClinicalBERT', vocab_size=28996, model_max_length=1000000000000000019884624838656, is_fast=True, padding_side='right', truncation_side='right', special_tokens={'unk_token': '[UNK]', 'sep_token': '[SEP]', 'pad_token': '[PAD]', 'cls_token': '[CLS]', 'mask_token': '[MASK]'}, clean_up_tokenization_spaces=True),  added_tokens_decoder={\n",
+       "BertTokenizerFast(name_or_path='emilyalsentzer/Bio_ClinicalBERT', vocab_size=28996, model_max_length=1000000000000000019884624838656, is_fast=True, padding_side='right', truncation_side='right', special_tokens={'unk_token': '[UNK]', 'sep_token': '[SEP]', 'pad_token': '[PAD]', 'cls_token': '[CLS]', 'mask_token': '[MASK]'}, clean_up_tokenization_spaces=True, added_tokens_decoder={\n",
        "\t0: AddedToken(\"[PAD]\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
        "\t100: AddedToken(\"[UNK]\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
        "\t101: AddedToken(\"[CLS]\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
        "\t102: AddedToken(\"[SEP]\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
        "\t103: AddedToken(\"[MASK]\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
-       "}"
+       "}\n",
+       ")"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "id": "f56aec27-e5e1-4db4-bf51-0607d9aa2b6b",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
        ")"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "c6af8345-f6ee-40c7-8fff-5e3bccbb7f2c",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "id": "e796028b-a3cc-40fc-bef5-a6beda2dd853",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "id": "5f8a2f74-4e9a-4063-bb99-a6d1a1c57dd7",
    "metadata": {},
    "outputs": [
@@ -230,7 +230,7 @@
        "           117,  2445,  1104, 21518,   117,  1137, 11477,   119,   102]]), 'token_type_ids': tensor([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]]), 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]])}"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "id": "d7b4d11d-6427-444c-ae19-f4cee0044792",
    "metadata": {},
    "outputs": [
@@ -393,7 +393,7 @@
        "18    tensor(102)     [SEP]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "id": "b9832693-2b53-43cf-a9ef-9092705e618a",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "first few tokens: [('Jersey', 3308), ('Bridges', 17501), ('Beth', 6452), ('Schumacher', 24656), ('calf', 23256), ('app', 12647), ('develops', 11926), ('##quisition', 18540), ('##ination', 9400), ('##zon', 9515)]\n"
+      "first few tokens: [('fire', 1783), ('##bering', 26368), ('##ো', 28571), ('108', 10601), ('##gger', 9146), ('##mme', 12140), ('sustained', 8505), ('skeleton', 15427), ('assassinated', 17493), ('Reuben', 18522)]\n"
      ]
     }
    ],
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 14,
    "id": "6c022a79-42ad-43c5-8fd0-06ba715dead8",
    "metadata": {},
    "outputs": [
@@ -460,7 +460,7 @@
        "1607"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "id": "e6f220ba-cb86-495a-91a4-9e53176b31c2",
    "metadata": {},
    "outputs": [
@@ -665,7 +665,7 @@
        "21    tensor(102)    [SEP]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
    "id": "453de02a-472f-43e6-9bd9-21803b75197c",
    "metadata": {},
    "outputs": [
@@ -716,7 +716,7 @@
        " '.']"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 17,
    "id": "05a890fb-0056-4b8e-9d4e-c9baf7d7d7b9",
    "metadata": {},
    "outputs": [
@@ -745,7 +745,7 @@
        "'Token not found in the vocabulary.'"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
