--- a/loss_functions.ipynb
+++ b/loss_functions.ipynb
@@ -108,7 +108,7 @@
    "id": "9321a13f-4cfc-48d7-990a-f2b36fd211e6",
    "metadata": {},
    "source": [
-    "Quantifies the magnitude of the error between an algorithm prediction and an actual output by taking the average of the squared difference between the predictions and the target values. It is useful for **regression tasks**, particularly when we want to penalize larger errors more heavily."
+    "MSE quantifies the magnitude of the error between an algorithm prediction and an actual output by taking the average of the squared difference between the predictions and the target values. It is useful for **regression tasks**, particularly when we want to penalize larger errors more heavily."
    ]
   },
   {
@@ -140,7 +140,7 @@
    "id": "360128fc-c58d-40cb-b05e-d9fc9c89c8d4",
    "metadata": {},
    "source": [
-    "Used in **regression tasks** that calculates the average absolute differences between predicted values from a machine learning model and the actual target values. Unlike Mean Squared Error (MSE), MAE does not square the differences, treating all errors with equal weight regardless of their magnitude. Compared to MSE, MAE does not square the differences, which makes it less sensitive to outliers because it assigns an equal weight to all errors, regardless of their magnitude."
+    "Used in **regression tasks** that calculates the average absolute differences between predicted values from a machine learning model and the actual target values. Unlike Mean Squared Error (MSE), MAE does not square the differences, treating all errors with equal weight regardless of their magnitude, making it less sensitive to outliers.\n"
    ]
   },
   {
