some theory of logistic regression, BCE, and activation functions

--- a/activation_functions.ipynb
+++ b/activation_functions.ipynb
@@ -58,9 +58,7 @@
   {
    "cell_type": "markdown",
    "id": "ee67f2f4-4255-47c3-8e41-74c2da1ecf1c",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### ReLU (Rectified Linear Unit)"
    ]
@@ -113,9 +111,7 @@
   {
    "cell_type": "markdown",
    "id": "d508df54-81a3-4590-b6c6-3d480f96823e",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### Leaky ReLU"
    ]
@@ -168,11 +164,9 @@
   {
    "cell_type": "markdown",
    "id": "08128f7b-6e15-4ef3-882a-94a640a92bd0",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
-    "#### Sigmoid"
+    "#### Sigmoid (Logistic Function)"
    ]
   },
   {
@@ -180,7 +174,7 @@
    "id": "e5322663-08c9-48ab-bdc5-3bbc1d4caada",
    "metadata": {},
    "source": [
-    "A mathematical function that transforms a continuous real number into a range of (0, 1). If we use a linear activation function in a neural network, the model will only be able to separate data linearly, which results in poor performance on non-linear datasets. However, by adding a hidden layer with a sigmoid activation function, the model gains the ability to handle non-linearity, thereby improving performance.\n",
+    "A mathematical function that transforms a continuous real number into a range of (0, 1) <-> probability. If we use a linear activation function in a neural network, the model will only be able to separate data linearly, which results in poor performance on non-linear datasets. However, by adding a hidden layer with a sigmoid activation function, the model gains the ability to handle non-linearity, thereby improving performance.\n",
     "\n",
     "One key issue with using the sigmoid function is the vanishing gradient problem. When updating weights and biases using gradient descent, if the gradients are too small, the updates to weights and biases become insignificant, slowing down or even stopping learning.\n",
     "\n",
