--- a/loss_functions.ipynb
+++ b/loss_functions.ipynb
@@ -10,20 +10,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 7,
    "id": "b29848de-d894-4206-9540-558674408a5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "from PIL import Image\n",
     "import requests\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "import numpy as np\n",
     "\n",
-    "from utils.plots import plot_similarity_heatmap\n",
+    "from utils.plots import plot_similarity_heatmap, logistic_plot\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -31,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "id": "06113bdb-52b7-443f-a5a6-2808989ee46c",
    "metadata": {},
    "outputs": [],
@@ -64,8 +74,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a974cda2-9241-45f4-a594-d6a93590d5f0",
+   "metadata": {},
+   "source": [
+    "This loss function is also known as logistic loss function, as it is widely used for **logistic regression**. BCE comes in two formats, one is when the model outputs probabilities from a sigmoid function, thus we use the `nn.BCELoss()`. Another is when the model outputs logits, then we use `nn.BCEWithLogitsLoss()`. The `nn.BCEWithLogitsLoss()` applies a sigmoud function internally before computing the BCE."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "797bdd8f-d093-4e86-9edd-ecf13054e9c4",
    "metadata": {},
    "outputs": [],
@@ -79,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "fb6bfacb-75c6-4bf5-b4cf-2faf4c662629",
    "metadata": {},
    "outputs": [],
@@ -93,6 +111,38 @@
     "loss_bce = bce(y_true_np, y_pred_np)\n",
     "\n",
     "assert np.allclose(loss, loss_bce), \"Incorrect implementation\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "02742806-26a9-4b1b-b1ea-ebc30c6b0f62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BCELoss: 0.5846197605133057\n",
+      "BCEWithLogitsLoss: 0.5846197605133057\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sample logits output from model\n",
+    "logits = torch.tensor([0.2, 0.8])  # raw scores (need sigmoid)\n",
+    "targets = torch.tensor([0., 1.])   # ground-truth labels\n",
+    "\n",
+    "# Apply sigmoid manually\n",
+    "sigmoid = nn.Sigmoid()\n",
+    "probs = sigmoid(logits)\n",
+    "\n",
+    "# Compute loss\n",
+    "bce_loss = nn.BCELoss()\n",
+    "bce_logits_loss = nn.BCEWithLogitsLoss()\n",
+    "\n",
+    "print(\"BCELoss:\", bce_loss(probs, targets).item())\n",
+    "print(\"BCEWithLogitsLoss:\", bce_logits_loss(logits, targets).item())"
    ]
   },
   {
