--- a/einops.ipynb
+++ b/einops.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "id": "9788a505-d21e-4524-a94b-88f37b990531",
    "metadata": {},
    "outputs": [],
@@ -678,6 +678,168 @@
     "# simpler version of channel shuffle\n",
     "y_einops = rearrange(x, \"b (g c) h w-> b (c g) h w\", g=4)\n",
     "print(y_einops.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77bff9cb-28c6-42ee-aed9-ba6327a622d7",
+   "metadata": {},
+   "source": [
+    "#### Practicing Examples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5ff1e25-a7ef-4621-8f3c-7373752325b5",
+   "metadata": {},
+   "source": [
+    "Re-arranging from `n, c, h, w` to `patches, n, c`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "2aab4b70-5a53-4304-9eb7-5827b9b39233",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([10, 3, 50, 50])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.randn(10, 3, 50, 50)\n",
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "a99d636b-97a4-4ede-b61b-23af7efcf834",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2500, 10, 3])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n, c, h, w = x.shape\n",
+    "\n",
+    "y_torch = x.permute(2, 3, 0, 1) # torch.Size([50, 50, 10, 3])\n",
+    "y_torch = y_torch.reshape(h * w, n, c)\n",
+    "\n",
+    "y_torch.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "30565d72-6db0-4b98-9773-b4791adc5849",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.0552927255630493"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_torch[50, 1, 2].item()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f786e26-7ff4-40a8-aaf8-6c70dd88b97d",
+   "metadata": {},
+   "source": [
+    "Now using einops in a single line."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "f8b9c049-e4f7-4580-9c90-e913a0ebc158",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2500, 10, 3])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_einops = rearrange(x, 'b c h w -> (h w) b c')\n",
+    "y_einops.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "d560298b-e773-4610-ab11-c94290f6661c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.0552927255630493"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_einops[50, 1, 2].item()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "791ca5aa-865b-4a73-aeca-e83015e9416c",
+   "metadata": {},
+   "source": [
+    "Testing if both are the same."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "43ce3101-0134-4e8c-a6ba-8c2ed21811ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert torch.allclose(y_torch, y_einops), \"Wrong operations.\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edf4b4e6-ff3a-4eba-b8be-0c83d21080fd",
+   "metadata": {},
+   "source": [
+    "Both are performing the same operation on the tensor."
    ]
   }
  ],
