finished both msa and mlp equations implementation

--- a/vision_transformer_vit.ipynb
+++ b/vision_transformer_vit.ipynb
@@ -1599,6 +1599,158 @@
     "print(f\"Input shape of MSA block: {patch_and_position_embedding.shape}\")\n",
     "print(f\"Output shape MSA block: {patched_image_through_msa_block.shape}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3715cc94-eac0-4602-97ef-77096d28b42f",
+   "metadata": {},
+   "source": [
+    "Notice how the input and output shape of our data stays the same when it goes through the MSA block."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c6201dc-0b64-4633-ac59-d93bb55f67fa",
+   "metadata": {},
+   "source": [
+    "#### Equation 3: Multilayer Perceptron (MLP)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cb9f88f-7767-4aeb-98dc-406ed62237c4",
+   "metadata": {},
+   "source": [
+    "$$ \\begin{aligned} \\mathbf{z}_{\\ell} &=\\operatorname{MLP}\\left(\\operatorname{LN}\\left(\\mathbf{z}_{\\ell}^{\\prime}\\right)\\right)+\\mathbf{z}_{\\ell}^{\\prime}, & & \\ell=1 \\ldots L \\end{aligned} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ede5a481-70d0-4fa0-9b54-188078b1e14d",
+   "metadata": {},
+   "source": [
+    "Here MLP stands for \"multilayer perceptron\" and LN stands for \"layer normalization\" (as discussed above). And the addition on the end is the skip/residual connection."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd1a3ff6-7863-4e1e-931f-81dca8bd3056",
+   "metadata": {},
+   "source": [
+    "The term MLP is quite broad as it can refer to almost any combination of multiple layers (hence the \"multi\" in multilayer perceptron).\n",
+    "\n",
+    "But it generally follows the pattern of:\n",
+    "\n",
+    "```python\n",
+    "linear layer -> non-linear layer -> linear layer -> non-linear layer\n",
+    "```\n",
+    "\n",
+    "In the the case of the ViT paper, the MLP structure is defined in section 3.1:\n",
+    "\n",
+    ">The MLP contains two layers with a GELU non-linearity.\n",
+    "\n",
+    "Where \"two layers\" refers to linear layers (`torch.nn.Linear()` in PyTorch) and \"GELU non-linearity\" is the GELU (Gaussian Error Linear Units) non-linear activation function (`torch.nn.GELU()` in PyTorch). Note: A linear layer (`torch.nn.Linear()`) can sometimes also be referred to as a \"dense layer\" or \"feedforward layer\". Some papers even use all three terms to describe the same thing (as in the ViT paper).\n",
+    "\n",
+    "Another detail about the MLP block that didn't appear until Appendix B.1 (Training):\n",
+    "> Table 3 summarizes our training setups for our different models. ...Dropout, when used, is applied **after every dense layer except for the the qkv-projections and directly after adding positional- to patch embeddings.**\n",
+    "\n",
+    "This means that every linear layer (or dense layer) in the MLP block has a dropout layer (`torch.nn.Dropout()` in PyTorch). The value of which can be found in Table 3 of the ViT paper (for ViT-Base, dropout=0.1). Knowing this, the structure of our MLP block will be:\n",
+    "\n",
+    "```python\n",
+    "layer norm -> linear layer -> non-linear layer -> dropout -> linear layer -> dropout\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "942779ea-dbb5-4db5-b075-25735fb0c793",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Create a class that inherits from nn.Module\n",
+    "class MLPBlock(nn.Module):\n",
+    "    \"\"\"Creates a layer normalized multilayer perceptron block (\"MLP block\" for short).\"\"\"\n",
+    "    # 2. Initialize the class with hyperparameters from Table 1 and Table 3\n",
+    "    def __init__(self,\n",
+    "                 embedding_dim:int=768, # Hidden Size D from Table 1 for ViT-Base\n",
+    "                 mlp_size:int=3072, # MLP size from Table 1 for ViT-Base\n",
+    "                 dropout:float=0.1): # Dropout from Table 3 for ViT-Base\n",
+    "        super().__init__()\n",
+    "\n",
+    "        # 3. Create the Norm layer (LN)\n",
+    "        self.layer_norm = nn.LayerNorm(normalized_shape=embedding_dim)\n",
+    "\n",
+    "        # 4. Create the Multilayer perceptron (MLP) layer(s)\n",
+    "        self.mlp = nn.Sequential(\n",
+    "            nn.Linear(in_features=embedding_dim,\n",
+    "                      out_features=mlp_size),\n",
+    "            nn.GELU(), # \"The MLP contains two layers with a GELU non-linearity (section 3.1).\"\n",
+    "            nn.Dropout(p=dropout),\n",
+    "            nn.Linear(in_features=mlp_size, # needs to take same in_features as out_features of layer above\n",
+    "                      out_features=embedding_dim), # take back to embedding_dim\n",
+    "            nn.Dropout(p=dropout) # \"Dropout, when used, is applied after every dense layer..\"\n",
+    "        )\n",
+    "\n",
+    "    # 5. Create a forward() method to pass the data through the layers\n",
+    "    def forward(self, x):\n",
+    "        x = self.layer_norm(x)\n",
+    "        x = self.mlp(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "943d295b-5ebd-45b1-83bd-eb46b0e65ad2",
+   "metadata": {},
+   "source": [
+    "The `MLPBlock()` created doesn't include a skip or residual connection (\"$+\\mathbf{z}_{\\ell}^{\\prime}$\" in equation 3), we'll include this when we create the entire Transformer encoder later on.\n",
+    "\n",
+    "Let's try it out by create an instance of our MLPBlock and passing through the `patched_image_through_msa_block` variable we created."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "f25d85f9-aa70-4090-8649-7f5c8d7037dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input shape of MLP block: torch.Size([1, 197, 768])\n",
+      "Output shape MLP block: torch.Size([1, 197, 768])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an instance of MLPBlock\n",
+    "mlp_block = MLPBlock(embedding_dim=768, # from Table 1\n",
+    "                     mlp_size=3072, # from Table 1\n",
+    "                     dropout=0.1) # from Table 3\n",
+    "\n",
+    "# Pass output of MSABlock through MLPBlock\n",
+    "patched_image_through_mlp_block = mlp_block(patched_image_through_msa_block)\n",
+    "print(f\"Input shape of MLP block: {patched_image_through_msa_block.shape}\")\n",
+    "print(f\"Output shape MLP block: {patched_image_through_mlp_block.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca8cbd47-53fe-4793-9459-94ba0141d870",
+   "metadata": {},
+   "source": [
+    "#### Create the Transformer Encoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "307c596a-7a92-42cf-826e-1fc0a31bdd19",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
