--- a/nerf.ipynb
+++ b/nerf.ipynb
@@ -1136,7 +1136,9 @@
   {
    "cell_type": "markdown",
    "id": "a434ca6d-2d4b-4fd8-998a-7670d4a499f6",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### 3D Reconstruction Modules"
    ]
@@ -1526,7 +1528,9 @@
   {
    "cell_type": "markdown",
    "id": "c3672424-ad52-400b-b605-043d8a5d7de8",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "##### Training"
    ]
@@ -2056,6 +2060,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "06dd8962-1c94-493a-8643-43cfad124515",
+   "metadata": {},
+   "source": [
+    "#### NeRF"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2a50ed62-5bd4-4cd3-a5db-c7b31188385b",
    "metadata": {},
    "source": [
@@ -2063,33 +2075,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "26599c59-9ccc-4226-809e-1b53b80c9a5c",
+   "metadata": {},
+   "source": [
+    "Note that in NeRF, the color $c$ is dependent on both the position of the ray $r(t)$ at time $t$ and the direction $d$, as in the formula: $c(r(t), d)$. This is possible (modelling the light field) by feeding the NeRF NN 5 inputs instead of the three coordinates only, which are: three coordinates $x$, $y$, $z$, $theta$ and $phi$. The output density $sigma$ doesn't depend on both $theta$ and $phi$ (independent)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69d44e14-a284-45a8-8ca1-ba2046568a7f",
+   "metadata": {},
+   "source": [
+    " Another possible issue in NeRF NN is that it is biased to learn low frequencies faster, thus applying a simple mapping to the network input provides a solution to this problem, using positional encoding."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf9a4b14-ae2a-4637-bc3b-b228b948188e",
+   "metadata": {},
+   "source": [
+    "##### Architecture Implementation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b997f398-4c61-406f-a1e9-1a71d61c98c2",
+   "id": "a05183ae-3419-4755-a8ac-4ebfd8d80888",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c80825e-109f-41ac-8791-e2a7bb36e251",
+   "cell_type": "markdown",
+   "id": "8b89e0ef-f220-4f42-b485-cefd4607084c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "##### Positional Encoding"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af1586b1-d33a-486a-85ab-c601a3532805",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b512bd34-a8fa-4fb4-b66d-96fb8ecdc185",
+   "id": "bcfa9e84-97ad-4d10-9770-eaa5d43d9d6e",
    "metadata": {},
    "outputs": [],
    "source": []
