new nnunet planner note for comparison later

--- a/nnU-Net v2.ipynb
+++ b/nnU-Net v2.ipynb
@@ -506,6 +506,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "22886647-ae4f-4f2f-aaee-8f5b55f4c7fc",
+   "metadata": {},
+   "source": [
+    "From the logs above, we notice the authors made an update to the planner. We can compare both approaches if GPU requirements were met.\n",
+    "\n",
+    "https://github.com/MIC-DKFZ/nnUNet/blob/master/documentation/resenc_presets.md"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d4e68b71-65f9-4d3b-9810-24f76f9bb3f0",
    "metadata": {},
    "source": [
